# laser_risk_calculator

./: README.rst  pyproject.toml
src/laser_risk_calculator/calculator/: constants.py  laser.py
src/laser_risk_calculator/qt_backend/: laser_gui.py
